# terminal-editor-rs

./: Cargo.toml  README.md
.github/workflows/: quickstart.yml
src/: main.rs
